--- a/models/sources.yml
+++ b/models/sources.yml
@@ -9,4 +9,14 @@ sources:
           - name: customers
             description: One record per customer.
           - name: orders
+            loaded_at_field: _etl_loaded_at
+            freshness:
+              warn_after: {count: 24, period: hour}
+              error_after: {count: 12, period: hour}
             description: One record per order. Includes cancelled and deleted orders.
+    - name: jaffle_shop_stripe
+      description: This is a replica of the Postgres database used by our app
+      database: raw
+      schema: stripe
+      tables:
+          - name: payment 
