--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -6,7 +6,7 @@ config-version: 2
 profile: 'default'
 
 model-paths: ["models"]
-analysis-paths: ["analysis"]
+analysis-paths: ["analyses"]
 test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
